fixing course and section DB constraints, fixing feedback message when translation is too long for field

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,14 +103,6 @@ $secondary: $gray-400 !default;
         margin-top: 3rem;
     }
 
-    /* .local_deepler__activity {
-         margin-bottom: .4rem;
-         border-top: 2px $secondary solid;
-         border-radius: 0 !important;
-     }
-
-     */
-
     .local_deepler__activitydesc, .local_deepler__activityfield {
         color: $secondary;
         position: relative;
